--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,31 @@
 /*  your css code here. If applicable */
+#box{
+	width:300px;
+	height:500px;
+	background-color:grey;
+	
+	box-shadow: 10px 10px 8px #888888;
+}
+img{
+	margin-top:40px;
+	margin-left:30px;
+	padding:20px;
+	
+}
+h1{
+	text-align:center;
+}
+h3{
+	text-align:center;
+}
+h3{
+	text-align:center;
+}
+#btn{
+	text-align:center;}
+button{
+padding:5px;
+	border-radius:8px;	
+	background-color:red;
+}
+	
